<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="logo"></string>
    <string name="app_name">卡伦特咖啡非现支付小屏版v2.3.9</string>
    <string name="msg_connect">正在连接咖啡机&#8230;&#8230;</string>
    <string name="title_pickupcode">提货码</string>
    <string name="title_paytype">请打开支付宝或者微信扫码支付</string>
    <string name="title_paytype2">请选择一种支付方式进行支付</string>
    <string name="title_time">60</string>
    <string name="title_alipaystr">支付宝支付</string>
    <string name="title_wechatstr">微信支付</string>
    <string name="title_takemeau">点单</string>
    <string name="title_payconfirm">确认支付</string>
    <string name="title_putcup">放置杯子</string>
    <string name="title_makeover">制作完成</string>
    <string name="message_putcup">请把杯子放置在下图所示的位置</string>
    <string name="message_coffeemakeing">咖啡制作中，请稍后&#8230;&#8230;</string>
    <string name="message_thanks">感谢购买，期待下次光临</string>
    <string name="message_payfaild">支付失败</string>
    <string name="message_nowahter">咖啡机缺水</string>
    <string name="message_nocpffee">咖啡机缺豆</string>
    <string name="message_macerror">咖啡机过滤器阻塞</string>
    <string name="message_pay_success">恭喜，您的支付成功</string>
    <string name="message_pay_failed">对不起，您的支付失败</string>
    <string name="message_init_check">开机自检中，进度%1$s%%</string>
    <string name="message_putcup_timeout">杯子放置超时，本次交易取消</string>
    <string name="message_pay_timeout">对不起，您的支付超时了，请您再次购买</string>
    <string name="message_coffee_make_timeout">对不起，咖啡制作超时了，请您再次购买。已支付款项稍后将退款，如无退款请联系商家。</string>
    <string name="message_system_error">对不起，系统好像出现了故障，请及时联系管理员处理</string>
    <string name="message_franchise_disabled">对不起，您的营运商资格已过期或被停用，请尽快联系厂家</string>
    <string name="message_terminal_disabled">对不起，终端已被运营商停用，请尽快联系运营商</string>
    <string name="title_timesec">S</string>
    <string name="title_menu_rmtj">热门推荐</string>
    <string name="title_menu_yskf">意式咖啡</string>
    <string name="title_menu_mskf">美式咖啡</string>
    <string name="title_menu_kbjn">卡布奇诺</string>
    <string name="title_menu_nt">拿铁</string>
    <string name="title_menu_thzq">提货专区</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="label_uuid">本机编号:</string>
    <string name="sample_uuid">00000000&#8211;01db&#8211;35a5&#8211;47fe&#8211;0a3b0033c587</string>
    <string name="backtomain">返回欢迎界面</string>
    <string name="current_ad_version">广告版本:</string>
    <string name="current_ad_update_time">更新时间:</string>
    <string name="current_ad_name">广告名称:</string>
    <string name="current_menu_version">菜单版本:</string>
    <string name="current_ad_number">广告数量:</string>
    <string name="current_ad_switch_time">切换时间:</string>
    <string name="current_ad_switch_effect">切换效果:</string>
    <string name="ad_update_history">查看广告升级历史</string>
    <string name="label_franchise">运营商号:</string>
    <string name="app_version">程序版本:</string>
    <string name="heartbeat_time">心跳间隔:</string>
    <string name="server_url">后台地址:</string>
    <string name="alipay_url">支付宝地址:</string>
    <string name="wechatpay_url">微信付地址:</string>
    <string name="factory_mode">维护模式</string>
    <string name="current_menu_number">商品数量:</string>
    <string name="menu_update_history">查看菜单升级历史</string>
    <string name="current_menu_name">菜单名称:</string>
    <string name="view_log">查看日志</string>
    <string name="checkUpdate">检查更新</string>
    <string name="active">激活终端</string>
    <string name="active_status">激活状态:</string>
    <string name="setHeartBeat">设置心跳时间</string>
    <string name="watchSerialData">查看咖啡机通信数据</string>
    <string name="test_terminal_id">编号:1234567890</string>
    <string name="exit_app">退出程序</string>
    <string name="rmb50">¥50</string>
    <string name="rmb100">¥100</string>
    <string name="rmb200">¥200</string>
    <string name="rmb300">¥300</string>
    <string name="rmb500">¥500</string>
    <string name="rmb1000">¥1000</string>
    <string name="vip">VIP储值卡</string>

</resources>